force-app/main/default/objects/Recurring_Donations__c/Recurring_Donations__c.object-meta.xml
<CustomObject>
    <description>Custom object to track pledges and recurring donation commitments.</description>
    <label>Recurring Donation</label>
    <nameField>
        <label>Recurring Donations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>