force-app/main/default/objects/Recurring_Donations__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The donor who made the recurring donation or one-time donation or any other payment for BUP</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>