force-app/main/default/objects/Recurring_Donations__c/fields/Amount_Promised__c.field-meta.xml
<CustomField>
    <fullName>Amount_Promised__c</fullName>
    <description>The total amount promised by the donor to pay in fiscal year</description>
    <label>Amount Promised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>