force-app/main/default/objects/Recurring_Donations__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information about the donation.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>