force-app/main/default/objects/Recurring_Donations__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal Year for Buffalo UP foundation</description>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>