force-app/main/default/objects/Recurring_Donations__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Active: This status is used when the donor has started making payments towards their pledged amount, and the recurring donation is ongoing.
Pending: his status is used when a donor has committed to a recurring donation, but the first payment has not yet been received.
Completed: This status is used when the donor has fulfilled their total pledged amount, and the recurring donation is complete
Cancelled: This status is used when a recurring donation has been cancelled for any reason, and no additional payments will be made.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>