force-app/main/default/objects/Recurring_Donations__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>The total amount paid towards the recurring donation by summing all related transaction records that are associated with this specific recurring donation.</description>
    <formula>100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>